####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = src docs 

EXTRA_DIST = cal3d.kdevprj AUTHORS COPYING ChangeLog INSTALL README TODO cal3d.opt cal3d.dsp cal3d.dsw cal3d.doxygen 

####### kdevelop will overwrite this part!!! (end)############
# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4


