####### kdevelop will overwrite this part!!! (begin)##########

SUBDIRS = shared 

EXTRA_DIST = guide.sgml guide_introduction.sgml guide_architecture.sgml guide_decisions.sgml guide_setup.sgml api_footer.html api_header.html guide.dsl guide_gfdl.sgml guide_lgpl.sgml guide_apiref.sgml guide_usage.sgml guide_phases.gif guide_classes_1.gif guide_classes_2.gif guide_classes_3.gif 

####### kdevelop will overwrite this part!!! (end)############
