####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = cal3d_dummy_app
cal3d_dummy_app_SOURCES = main.cpp 
cal3d_dummy_app_LDADD   = ./cal3d/libcal3d.la 

SUBDIRS = cal3d 

EXTRA_DIST = main.cpp 

####### kdevelop will overwrite this part!!! (end)############

# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
cal3d_dummy_app_LDFLAGS = $(all_libraries) 
                                                                               
