# ************************************************************************
#
# This file is part of the Cal3D library/package
# Copyright (C) 2002 Bruno 'Beosil' Heidelberger (beosil@swileys.com)
#
# This library is free software; you can redistribute it and/or modify it
# under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation; either version 2.1 of the License, or (at
# your option) any later version.
#
# ************************************************************************

INCLUDES = $(all_includes)

# bin_PROGRAMS = cal3d_dummy_app

# cal3d_dummy_app_SOURCES = main.cpp
# cal3d_dummy_app_LDADD = ./cal3d/libcal3d.la
# cal3d_dummy_app_LDFLAGS = $(all_libraries) $(LDFLAGS)

SUBDIRS = cal3d

# ************************************************************************

