# ************************************************************************
#
# This file is part of the Cal3D library/package
# Copyright (C) 2002 Bruno 'Beosil' Heidelberger (beosil@swileys.com)
#
# This library is free software; you can redistribute it and/or modify it
# under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation; either version 2.1 of the License, or (at
# your option) any later version.
#
# ************************************************************************

SUBDIRS = cal3d

bin_PROGRAMS = cal3d_converter
man_MANS = cal3d_converter.1

cal3d_converter_SOURCES = cal3d_converter.cpp
cal3d_converter_LDFLAGS = cal3d/libcal3d.la

# ************************************************************************

